<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/txt_valor1"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/txt_valor2"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtn1" />

    <CheckBox
        android:id="@+id/ck2"
        android:layout_width="65dp"
        android:layout_height="46dp"
        android:layout_marginStart="28dp"
        android:text="@string/ck_multiplicacion"
        android:textSize="48sp"
        app:layout_constraintStart_toEndOf="@+id/ck4"
        tools:layout_editor_absoluteY="299dp"
        tools:text="@string/ck_multiplicacion" />

    <CheckBox
        android:id="@+id/ck1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:text="@string/ck_dividir"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ck2"
        app:layout_constraintTop_toTopOf="@+id/ck2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="494dp" />

    <TextView
        android:id="@+id/txtresultado"
        android:layout_width="147dp"
        android:layout_height="55dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:text="@string/tv_resultado" />

    <CheckBox
        android:id="@+id/ck3"
        android:layout_width="87dp"
        android:layout_height="44dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="68dp"
        android:text="@string/ck_suma"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtn2" />

    <CheckBox
        android:id="@+id/ck4"
        android:layout_width="92dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:text="@string/ck_resta"
        app:layout_constraintStart_toEndOf="@+id/ck3"
        app:layout_constraintTop_toTopOf="@+id/ck2" />
</androidx.constraintlayout.widget.ConstraintLayout>